# zig2025

./: .clang-format  .gitignore  .gitmodules  .gn  BUILD.gn  BUILDCONFIG.gn  README.md  banner.txt  bootstrap.sh  pigweed.json  requirements.txt
.west/: config
app/: CMakeLists.txt  prj.conf
app/boards/: robokit1.overlay  rpi_pico.overlay
app/di/: CMakeLists.txt  di.cc
app/di/public/zig2025/di/: app.h
app/dts/bindings/: gpio-loop.yaml
app/rpc/: BUILD.gn  CMakeLists.txt  service.cc
app/rpc/proto/: zig2025.proto
app/rpc/public/zig2025/rpc/: service.h
app/src/: main.cc
build_overrides/: pigweed.gni
manifest/: west.yml
tools/: BUILD.gn  setup.cfg
tools/zig2025_demo_tools/: console.py  interrupt_test.py
