# This is imported into a scope so as not to pollute the global variable space.
_pigweed_directory = {
  import("//build_overrides/pigweed.gni")
}

# The default toolchain is not used in Pigweed builds, so it is set to an empty
# toolchain. The top-level BUILD.gn should stamp a group with all of the build
# targets and their toolchains.
set_default_toolchain("${_pigweed_directory.dir_pw_toolchain}/default")
