[metadata]
name = zig2025_demo_tools
version = 0.0.1
author = Google
author_email = peress@google.com
description = Demo project for ZiG-2025

[options]
packages = find:
zip_safe = False
install_requires =

[options.entry_points]
console_scripts =
    find-files = zig2025_demo_tools.find_files:main

[options.package_data]
zig2025_demo_tools =
    py.typed