import("//build_overrides/pigweed.gni")

import("$dir_pw_build/target_types.gni")
import("$dir_pw_docgen/docs.gni")
import("$dir_pw_protobuf_compiler/proto.gni")

pw_proto_library("zig2025_protos") {
    sources = ["proto/zig2025.proto"]
    inputs = ["proto/zig2025.options"]
    deps = [ "$dir_pw_protobuf:common_protos" ]
}
